--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,3 +1,26 @@
+[default]
 appname = Mole
 httpport = 8080
 runmode = dev
+enableAdmin = true
+
+#是否模板自动渲染
+autoRender = false
+
+#是否开启静态目录的列表显示
+directoryIndex = true
+
+#是否开启热升级
+graceful = false
+
+#session 是否开启
+sessionOn = false
+
+#存在客户端的 cookie 名称
+sessionName = Mole
+
+
+[vtctl]
+server = http://192.168.80.172:15000
+
+
