--- a/conf/app.conf
+++ b/conf/app.conf
@@ -19,6 +19,9 @@ sessionOn = false
 #存在客户端的 cookie 名称
 sessionName = Mole
 
+#是否允许在 HTTP 请求时，返回原始请求体数据字节
+copyRequestBody = true
+
 
 [vtctl]
 server = http://192.168.80.172:15000
