--- a/conf/app.conf
+++ b/conf/app.conf
@@ -27,11 +27,19 @@ copyRequestBody = true
 recoverPanic = false
 
 [vtctl]
-server = http://192.168.80.172:15000
+#server = http://192.168.80.172:15000
+service = http://192.168.80.240:15000
 
 [k8s]
 config = ./template/config.yaml
-podyaml = ./template/vttablet-pod-template.yaml
-svcyaml = ./template/vtgate-service-template.yaml
-nsyaml = ./template/namespace-template.yaml
+podyaml = ./template/pod/vttablet-pod-template.yaml
+etcdlbsvcyaml = ./template/service/etcd-service-lb-template.yaml
+etcdcbsvcyaml = ./template/service/etcd-service-cb-template.yaml
+vtctldsvcyaml = ./template/service/vtctld-service-template.yaml
+vtgatesvcyaml = ./template/service/vtgate-service-template.yaml
+etcdrcyaml = ./template/rc/etcd-controller-template.yaml
+vtctldrcyaml = ./template/rc/vtctld-controller-template.yaml
+vtgatercyaml = ./template/rc/vtgate-controller-template.yaml
+vtgatebcrcyaml = ./template/rc/vtgate-controller-benchmarking-template.yaml
+nsyaml = ./template/ns/namespace-template.yaml
 
