--- a/example/mole-service-template.yaml
+++ b/example/mole-service-template.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ports:
     - port: 80
-      targetPort: api-server
+      targetPort: 8080
   selector:
     component: api
     app: mole
