--- a/conf/app.conf
+++ b/conf/app.conf
@@ -27,8 +27,7 @@ copyRequestBody = true
 recoverPanic = false
 
 [vtctl]
-#server = http://192.168.80.172:15000
-service = http://192.168.80.240:15000
+service = http://vtctld.default.svc.hades.local:15000
 
 [k8s]
 config = ./template/config.yaml
