--- a/conf/app.conf
+++ b/conf/app.conf
@@ -27,7 +27,7 @@ copyRequestBody = true
 recoverPanic = false
 
 [vtctl]
-service = http://vtctld.default.svc.hades.local:15000
+server = "http://vtctld.default.svc.hades.local:15000"
 
 [k8s]
 config = ./template/config.yaml
